--- a/aulas/aula06/ex02.html
+++ b/aulas/aula06/ex02.html
@@ -36,9 +36,8 @@
         <p>Já me livrei da maldição</p>
     </main>
     <script>
-       window.alert('Minha primeira mensagem!')
-       window.confirm('Está gostando do Javascript?')
-       window.prompt('Qual é o seu nome?')
+       var nome = window.prompt('Qual é o seu nome?')
+       window.alert('É um grande prazer em te conhecer, '+ nome + '!')
     </script>
 </body>
 </html>
