--- a/aulas/aula06/ex005.html
+++ b/aulas/aula06/ex005.html
@@ -24,7 +24,7 @@
         var corpo = window.document.body
         corpo.style.background = 'rgb(0, 145, 241)'
         var p1 = window.document.getElementsByTagName ('p')[0]
-        window.document.write(`Está escrito assim: ${p1.innerText}`)
+        window.document.write(`Está escrito assim: ${p1.innerHTML}`)
         /* 
        var d = window.document.getElementById ('msg')
         d.style.color = 'black'
