--- a/aulas/aula011/ex010.html
+++ b/aulas/aula011/ex010.html
@@ -21,13 +21,11 @@
         res.innerHTML = `<p>Sua velocidade é de <strong>${vel}</strong>.</p>`
         if (vel > 60){
             res.innerHTML += '<p>Você está <strong>acima</strong> do permitido.</p>'
-            res.innerHTML += '<p><strong>Você será multado</strong> </p>'
+            res.innerHTML += '<p><strong>Você será multado.</strong> </p>'
         }else{
             res.innerHTML += 'Você está <strong>dentro</strong> do permitido.'
         }
         }  
-
-
     </script>
 </body>
 </html>
