--- a/aulas/aula014ex/ex017/modelo.html
+++ b/aulas/aula014ex/ex017/modelo.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <header>
-        <h1>Verificador de idade</h1>
+        <h1>Tabuada</h1>
     </header>
     <section>
         <div>
-            Ano de nascimento: <input type="number" name="numero" id="numero">
+           <p>Calcular a tabuada de: <input type="number" name="numero" id="numero"> <input type="button" value="Calcular" onclick="calcular()"></p>
         </div>
-        <div>
-
+        <div id="res">
+            Esperando um número...
         </div>
     </section>
     <footer>
