--- a/aulas/aula016ex/modelo/modelo.html
+++ b/aulas/aula016ex/modelo/modelo.html
@@ -13,10 +13,10 @@
     </header>
     <section>
         <div>
-            <p>Número (entre 1 e 100) <input type="number" name="número" id="fnum"> <input type="button" value="Adicionar" onclick="adicionar()">
+            <p>Número (entre 1 e 100):  <input type="number" name="número" id="fnum"> <input type="button" value="Adicionar" onclick="adicionar()">
             <br><br><select name="flista" id="flista" size="10">
             </select>
-            <br><input type="button" value="Finalizar">
+            <br><input type="button" value="Finalizar" onclick="finalizar()">
             </p>
         </div>
         <div id="res">
