--- a/aulas/aula014ex/ex017/modelo.html
+++ b/aulas/aula014ex/ex017/modelo.html
@@ -13,10 +13,13 @@
     </header>
     <section>
         <div>
-           <p>Calcular a tabuada de: <input type="number" name="numero" id="numero"> <input type="button" value="Calcular" onclick="calcular()"></p>
+           <p>Calcular a tabuada de: <input type="number" name="numero" id="numero"> <input type="button" value="Calcular" id="botao" ></p>
         </div>
         <div id="res">
-            Esperando um número...
+            <div id="principal">
+                <select name="lista" id="lista" size="11">
+                </select>
+            </div>
         </div>
     </section>
     <footer>
