--- a/aulas/aula014ex/ex017/modelo.html
+++ b/aulas/aula014ex/ex017/modelo.html
@@ -23,7 +23,7 @@
         </div>
     </section>
     <footer>
-        <p> &copy; CursoEmVídeo</p>
+        <p> &copy; Igor</p>
     </footer>
     <script src="script.js"></script>
 </body>
