--- a/aulas/aula014ex/ex017/modelo.html
+++ b/aulas/aula014ex/ex017/modelo.html
@@ -16,10 +16,7 @@
            <p>Calcular a tabuada de: <input type="number" name="numero" id="numero"> <input type="button" value="Calcular" id="botao" ></p>
         </div>
         <div id="res">
-            <div id="principal">
-                <select name="lista" id="lista" size="11">
-                </select>
-            </div>
+            <select name="lista" id="lista" size="11"></select>
         </div>
     </section>
     <footer>
